--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -7,4 +7,16 @@ header {
   background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
   border-bottom: solid 1px #275da1;
 }
+
+#main-content h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: 'Helvetica Neue', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-size: 2.8em;
+  font-weight: normal;
+  color: #474747;
+  text-indent: 6px;
+  letter-spacing: -1px;
+}
+
 @import "{{ site.theme }}";
